# tinkoff-guess-game-helper-o3

./: README.md  pyproject.toml
backend/: .gitignore  Cargo.toml  pyproject.toml
backend/src/: lib.rs
ui/: __main__.py  app.py  foo.py  tinkoffguessgamehelper.kv
