[tool.poetry]
name = "tinkoff-guess-game-helper-o3"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "tinkoff_guess_game_helper_o3"}]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "^0.14.13"
kivy = {extras = ["base"], version = "^2.1.0"}
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
